--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,4 +25,4 @@ jobs:
 
     - name: Run the test.py script
       run: |
-        pytest testCases/
+        pytest testCases/ --disable-warnings -s
